media/filebrowser/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: filebrowser
  namespace: media
  annotations:
    flux.weave.works/tag.ddclient: regexp:^v2.*$
    flux.weave.works/automated: 'true'
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media
      - name: scratch
        persistentVolumeClaim:
          claimName: scratch
      - name: filebrowser
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:filebrowser
          targetPortal: 192.168.220.149
          lun: 1
          fsType: ext4
      - name: config
        configMap:
          name:
            filebrowser
      containers:
      - name: filebrowser
        image: filebrowser/filebrowser:v2.0.3
        command: ["/filebrowser"]
        args:
        - --config
        - /etc/filebrowser.json
        volumeMounts:
        - name: config
          mountPath: /etc/filebrowser.json
          subPath: filebrowser.json
          readOnly: true
        - name: filebrowser
          subPath: data
          mountPath: /data
        - name: media
          mountPath: /srv/media
        - name: scratch
          mountPath: /srv/scratch
        ports:
        - containerPort: 8080
          name: filebrowser
