media/filebrowser/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: filebrowser
  namespace: media
spec:
  serviceName: filebrowser
  replicas: 1
  selector:
    matchLabels:
      app: filebrowser
      version: v1
  template:
    metadata:
      labels:
        app: filebrowser
        version: v1
    spec:
      serviceAccountName: filebrowser
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      volumes:
        - name: media-rclone
          hostPath:
            path: /mnt/media-rclone
            type: Directory
        - name: media-nfs
          persistentVolumeClaim:
            claimName: media
        - name: scratch
          persistentVolumeClaim:
            claimName: scratch
        - name: filebrowser
          persistentVolumeClaim:
            claimName: filebrowser-iscsi-pvc
        - name: config
          configMap:
            name: filebrowser
      containers:
        - name: filebrowser
          image: docker.io/filebrowser/filebrowser:v2.26.0-s6
          resources:
            requests:
              cpu: "2"
              memory: "4Gi"
            limits:
              memory: "4Gi"
          command: ["filebrowser"]
          args:
            - --config
            - /etc/filebrowser.json
          volumeMounts:
            - name: config
              mountPath: /etc/filebrowser.json
              subPath: filebrowser.json
              readOnly: true
            - name: filebrowser
              subPath: data
              mountPath: /data
            - name: media-rclone
              mountPath: /srv/media
            - name: media-nfs
              mountPath: /srv/media-nfs
            - name: scratch
              subPath: downloads
              mountPath: /srv/scratch
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - test -f /srv/media/.anchors/dropbox
            periodSeconds: 10
            failureThreshold: 3
