media/filebrowser/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: media
spec:
  selector:
    app: filebrowser
  ports:
  - name: filebrowser
    port: 8080
    targetPort: 8080
