media/filebrowser/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser-tailscale
  namespace: media
spec:
  tls:
  - hosts:
    - sour-ghost
  defaultBackend:
    service:
      name: filebrowser
      port:
        name: http
  ingressClassName: tailscale
