media/filebrowser/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: "0"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    external-dns.alpha.kubernetes.io/target: "lga1.desertbluffs.com"
    nginx.ingress.kubernetes.io/auth-tls-secret: "ingress-nginx/auth-tls-secret"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "optional"
spec:
  ingressClassName: external-nginx
  tls:
    - hosts:
        - m.desertbluffs.com
  rules:
    - host: m.desertbluffs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: filebrowser
                port:
                  name: http
