media/filebrowser/00networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: filebrowser
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: filebrowser
  ingress:
  - ports:
    - port: 8080
    from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
